--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -10,3 +10,9 @@ html,
 body {
 	@apply text-white bg-bg text-base;
 }
+
+@layer utilities {
+	.grid-6-cols {
+		@apply grid grid-cols-6 gap-5;
+	}
+}
